obsec-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsec-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: obsec.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsec-service
                port:
                  number: 80
